basic logging frontend, erl->json format module

--- a/priv/static/index.html
+++ b/priv/static/index.html
@@ -7,9 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <style>main {
-        margin-top: 1em
-    }</style>
+    <style>
+        main {
+            margin-top: 1em
+        }
+        .leader::after {
+            content: "★";
+            color: gold;
+        }
+        .traitor {
+            background-color: rgba(255, 0, 0, 0.3);
+        }
+
+    </style>
 
 </head>
 <body>
@@ -61,9 +71,21 @@
             </form>
         </div>
     </div>
-    <!--<div class="row col-sm">-->
-    <!--<h2>Log</h2>-->
-    <!--</div>-->
+    <div class="row col-sm">
+        <h2>Log</h2>
+        <table class="table" id="messageLog">
+            <thead>
+            <tr>
+                <th>From</th>
+                <th>To</th>
+                <th>Message</th>
+            </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous"></script>
@@ -72,6 +94,9 @@
             crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
             integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.min.js"
+            integrity="sha256-aYYnqVVhAJ4lDammP4Qybmxg3/HVpA7/sNSCntyCyu4="
             crossorigin="anonymous"></script>
     <script src="/assets/scripts.js"></script>
 </main>
